--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.3.3",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-slideshow": "^1.0.1",
     "react-navigation": "^1.0.0-beta.19"
   },
   "devDependencies": {
