--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "git": "^0.1.5",
     "native-base": "^2.3.3",
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-slideshow": "^1.0.1",
-    "react-navigation": "^1.0.0-beta.19"
+    "react-navigation": "^1.0.0-beta.22"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
